# ai-orchestrator-emulator

./: .gitignore  README.md
Emulator/: .env  LoadGenWindows.ps1  README.md  bash_for_hosts.sh  client_emulator_dockerfile  copy_to_host.sh  docker-compose.yml  emulated_sr_dockerfile  install_for_hosts.sh  load_gen.sh  load_gen_data.txt  load_gen_v2.py
Emulator/Ansible/: README.md  ansible.cfg  docker_playbook.yml  hosts
Emulator/Terraform/: README.md  main.tf
Emulator/client_emulator/: Cargo.toml  dockerfile  tc_config.txt  tc_modify_script.sh  wrapper_dummy_caller_script.sh
Emulator/ctrl_plane/: Cargo.toml  Dockerfile
Emulator/ctrl_plane/ctrl_plane/: Cargo.toml
Emulator/ctrl_plane/ctrl_plane/src/: common.rs  lib.rs
Emulator/ctrl_plane/ctrl_plane/src/faas_client/: mod.rs
Emulator/ctrl_plane/ctrl_plane/src/file_client/: file_cache.rs  file_listener.rs  mod.rs
Emulator/ctrl_plane/ctrl_plane/src/host_agent_client/: mod.rs
Emulator/ctrl_plane/ctrl_plane/src/registry_client/: mod.rs
Emulator/ctrl_plane/ctrl_plane/src/server/: faas_server.rs  file_server.rs  mod.rs  registry_server.rs
Emulator/ctrl_plane/ctrl_plane_server/: Cargo.toml
Emulator/ctrl_plane/ctrl_plane_server/src/: main.rs
Emulator/ctrl_plane/src/: main.rs
Emulator/emulated_client/: Cargo.toml  README.md  dockerfile  tc_config copy.txt  wrapper_arbitrary_script.sh
Emulator/emulated_client_subprocess/: Cargo.toml  net_cls.classid  wrapper_dummy_caller_script.sh
Emulator/emulated_host/: Cargo.toml  Dockerfile
Emulator/emulated_sr/: Cargo.toml  start_function.sh
(+29 files in other folders)
