[package]
name = "ctrl_plane"
version = "0.1.0"
edition = "2021"

[lib]
# Define the library type, if necessary
# path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gethostname = "0.4.3"
tokio = { version = "1"}
reqwest = { version = "0.11", features = ["json"] }
local-ip-address = "0.5.6"
rocket = {version = "0.5", features = ["json"] }
sha2 = "0.10"
rocket_ws = "0.1"
tokio-tungstenite = "0.16.1"