[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5", features = ["json"] }
sha2 = "0.10"
serde = "1.0.194"
serde_json = "1.0"
rocket_ws = "0.1"
tokio = { version = "1"}
reqwest = { version = "0.11", features = ["json"] }
ctrl_plane = { path = "../ctrl_plane" }